--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -2,9 +2,8 @@
 
 ## Reading
 
-- Martin Klepmann _Building Data Intensive Applications_
-- Anne Fadiman _The Spirit Catches You and You Fall Down_
 - Eric Evans _Domain Driven Design_
+- Joan Didion _Political Fictions_
 
 ## Read
 - Jay Kreps _I <3 Logs_
@@ -12,3 +11,16 @@
 - Steven Pinker _The Blank Slate_ 🎧
 - Jared Diamond _Upheaval_ 🎧
 - Anne Applebaum _Iron Curtain_ 🎧
+- Martin Klepmann _Building Data Intensive Applications_
+- Anne Fadiman _The Spirit Catches You and You Fall Down_
+- Michael Romano _Second Helpings_
+- Joe Studwell _How Asia Works_
+- Dorsey Armstrong _The Black Death_
+- Allen J. McDonald _Truth, Lies, and O-Rings_
+- Richard Feynman _The Pleasure of Finding Things Out_
+- Michael Wyssession _The Science of Energy_
+- Jennifer Ackerman _The Genius of Birds_
+- Tracy Kidder _The Soul of a New Machine_
+- Daniel Dennet _From Bacteria to Bach and Back_
+- James Gleick _The Information_
+- 
