--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -3,7 +3,8 @@
 ## Reading
 
 - Eric Evans _Domain Driven Design_
-- Joan Didion _Political Fictions_
+- Richard Feynman _Lectures on Physics_
+- Bruce Alberts et al. _The Molecular Biology of the Cell_
 
 ## Read
 - Jay Kreps _I <3 Logs_
@@ -23,4 +24,6 @@
 - Tracy Kidder _The Soul of a New Machine_
 - Daniel Dennet _From Bacteria to Bach and Back_
 - James Gleick _The Information_
-- 
+- Carson McCullers _The Heart is a Lonely Hunter_
+- Joan Didion _Political Fictions_
+- Ian Stewart _Why Beauty is Truth_
