--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -5,6 +5,7 @@
 - Eric Evans _Domain Driven Design_
 - Richard Feynman _Lectures on Physics_
 - Bruce Alberts et al. _The Molecular Biology of the Cell_
+- Jordan Ellenberg _Shape_
 
 ## Read
 - Jay Kreps _I <3 Logs_
@@ -15,15 +16,17 @@
 - Martin Klepmann _Building Data Intensive Applications_
 - Anne Fadiman _The Spirit Catches You and You Fall Down_
 - Michael Romano _Second Helpings_
-- Joe Studwell _How Asia Works_
-- Dorsey Armstrong _The Black Death_
-- Allen J. McDonald _Truth, Lies, and O-Rings_
-- Richard Feynman _The Pleasure of Finding Things Out_
-- Michael Wyssession _The Science of Energy_
-- Jennifer Ackerman _The Genius of Birds_
-- Tracy Kidder _The Soul of a New Machine_
-- Daniel Dennet _From Bacteria to Bach and Back_
-- James Gleick _The Information_
+- Joe Studwell _How Asia Works_ 🎧
+- Dorsey Armstrong _The Black Death_ 🎧
+- Allen J. McDonald _Truth, Lies, and O-Rings_ 🎧
+- Richard Feynman _The Pleasure of Finding Things Out_ 🎧
+- Michael Wyssession _The Science of Energy_ 🎧
+- Jennifer Ackerman _The Genius of Birds_ 🎧
+- Tracy Kidder _The Soul of a New Machine_ 🎧
+- Daniel Dennet _From Bacteria to Bach and Back_ 🎧
+- James Gleick _The Information_ 🎧
 - Carson McCullers _The Heart is a Lonely Hunter_
 - Joan Didion _Political Fictions_
 - Ian Stewart _Why Beauty is Truth_
+- Albert Camus _Exile and the Kingdom_
+- Neil Price _Children of Ash and Elm_  🎧
