--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -5,7 +5,10 @@
 - Eric Evans _Domain Driven Design_
 - Richard Feynman _Lectures on Physics_
 - Bruce Alberts et al. _The Molecular Biology of the Cell_
-- Jordan Ellenberg _Shape_
+- Christian E. Posta and Rinor Maloku _Istio in Action_
+- Adam Bellemare _Event Driven Microservices_
+- Harry Percival & Bob Gregory _Architecture Patterns with Python_
+- Li Haoyi _Hands on Scala Programming_
 
 ## Read
 - Jay Kreps _I <3 Logs_
@@ -30,3 +33,6 @@
 - Ian Stewart _Why Beauty is Truth_
 - Albert Camus _Exile and the Kingdom_
 - Neil Price _Children of Ash and Elm_  🎧
+- Jordan Ellenberg _Shape_
+- Stephen Gould _The Flamingo's Smile_
+- Will Larson _Staff Engineer_
