--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -5,10 +5,12 @@
 - Eric Evans _Domain Driven Design_
 - Richard Feynman _Lectures on Physics_
 - Bruce Alberts et al. _The Molecular Biology of the Cell_
-- Christian E. Posta and Rinor Maloku _Istio in Action_
 - Adam Bellemare _Event Driven Microservices_
 - Harry Percival & Bob Gregory _Architecture Patterns with Python_
 - Li Haoyi _Hands on Scala Programming_
+- Iain McGilchrist _The Master and his Emissary_ 🎧
+- Alexander Mikaberidze _The Napoleonic Wars - A Global History_
+- Mauricio Aniche _Software Testing for Developers_
 
 ## Read
 - Jay Kreps _I <3 Logs_
@@ -36,3 +38,6 @@
 - Jordan Ellenberg _Shape_
 - Stephen Gould _The Flamingo's Smile_
 - Will Larson _Staff Engineer_
+- Christian E. Posta and Rinor Maloku _Istio in Action_
+- David Wallace Wells _The Uninhabitable Earth, Life after Warming_ 🎧
+- Dorsey Armstrong _The Medieval World_ 🎧
