--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -41,3 +41,4 @@
 - Christian E. Posta and Rinor Maloku _Istio in Action_
 - David Wallace Wells _The Uninhabitable Earth, Life after Warming_ 🎧
 - Dorsey Armstrong _The Medieval World_ 🎧
+- Thomas Friedman and Michael Mandelbaum _That Used to be Us_
