--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -39,6 +39,9 @@
 - Stephen Gould _The Flamingo's Smile_
 - Will Larson _Staff Engineer_
 - Christian E. Posta and Rinor Maloku _Istio in Action_
+- Ellen Ullman _Life in Code_ 🎧
 - David Wallace Wells _The Uninhabitable Earth, Life after Warming_ 🎧
 - Dorsey Armstrong _The Medieval World_ 🎧
 - Thomas Friedman and Michael Mandelbaum _That Used to be Us_
+- Jared Diamond _The Third Chimpanzee_ 🎧
+
