--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -44,4 +44,5 @@
 - Dorsey Armstrong _The Medieval World_ 🎧
 - Thomas Friedman and Michael Mandelbaum _That Used to be Us_
 - Jared Diamond _The Third Chimpanzee_ 🎧
-
+- Natalie Haynes _A Thousand Ships_
+- Iain McGilchrist _The Master and His Emissary_
