--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -8,7 +8,6 @@
 - Adam Bellemare _Event Driven Microservices_
 - Harry Percival & Bob Gregory _Architecture Patterns with Python_
 - Li Haoyi _Hands on Scala Programming_
-- Iain McGilchrist _The Master and his Emissary_ 🎧
 - Alexander Mikaberidze _The Napoleonic Wars - A Global History_
 - Mauricio Aniche _Software Testing for Developers_
 
@@ -44,5 +43,5 @@
 - Dorsey Armstrong _The Medieval World_ 🎧
 - Thomas Friedman and Michael Mandelbaum _That Used to be Us_
 - Jared Diamond _The Third Chimpanzee_ 🎧
-- Natalie Haynes _A Thousand Ships_
-- Iain McGilchrist _The Master and His Emissary_
+- Natalie Haynes _A Thousand Ships_ 🎧
+- Iain McGilchrist _The Master and His Emissary_ 🎧
