--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -45,3 +45,7 @@
 - Jared Diamond _The Third Chimpanzee_ 🎧
 - Natalie Haynes _A Thousand Ships_ 🎧
 - Iain McGilchrist _The Master and His Emissary_ 🎧
+- Marjane Satrapi _The Complete Persepolis_
+- Dan Jones _Powers and Thrones_
+- Michael Oldstone _Viruses, Plagues, and History_
+- Robert Tombs _The English and Their History_
