--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -50,3 +50,5 @@
 - Dan Jones _Powers and Thrones_ 🎧
 - Michael Oldstone _Viruses, Plagues, and History_ 🎧
 - Robert Tombs _The English and Their History_ 🎧
+- Edward Tufte _Visual Explanations_
+- John Porcellino _The Hospital Suite_
