--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -6,9 +6,7 @@
 - Richard Feynman _Lectures on Physics_
 - Bruce Alberts et al. _The Molecular Biology of the Cell_
 - Adam Bellemare _Event Driven Microservices_
-- Harry Percival & Bob Gregory _Architecture Patterns with Python_
 - Li Haoyi _Hands on Scala Programming_
-- Alexander Mikaberidze _The Napoleonic Wars - A Global History_
 - Mauricio Aniche _Software Testing for Developers_
 
 ## Read
@@ -52,3 +50,8 @@
 - Robert Tombs _The English and Their History_ 🎧
 - Edward Tufte _Visual Explanations_
 - John Porcellino _The Hospital Suite_
+- Tim Krabbe _The Rider_
+- Alexander Mikaberidze _The Napoleonic Wars - A Global History_
+- Peter Gordon _The Silver Way: China, Spanish America and the birth of globalisation_
+- David Graeber and David Wengrow _The Dawn of Everything_
+- Harry Percival & Bob Gregory _Architecture Patterns with Python_
