--- a/src/books/2021.md
+++ b/src/books/2021.md
@@ -55,3 +55,4 @@
 - Peter Gordon _The Silver Way: China, Spanish America and the birth of globalisation_
 - David Graeber and David Wengrow _The Dawn of Everything_
 - Harry Percival & Bob Gregory _Architecture Patterns with Python_
+- Andy Grundberg _How Photography Became Contemporary Art_
