--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -1,7 +1,13 @@
 ## Reading
-- Chuck Klosterman _The Nineties_
+- James Stanier _Becoming an Effective Sfotware Engineering Manager_
+- Robert Pinker _The Language Instinct_
+- Marcello La Rocca _Advanced Algorithms and Data Structures_
 
 ## Read
 - Annie Dillard _The Maytrees_
 - Timothy Snyder _The Bloodlands_
 - Li Haoyi _Hands on Scala Programming_
+- Chuck Klosterman _The Nineties_
+- Eric Cline _1197 BC The Year Civilization Collapsed_
+- Anthony Beevor _Stalingrad: The Fateful Siege_
+- Todd McLeish _Return of the Sea Otter_
