--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -9,5 +9,7 @@
 - Li Haoyi _Hands on Scala Programming_
 - Chuck Klosterman _The Nineties_
 - Eric Cline _1197 BC The Year Civilization Collapsed_
+- Atul Gawunde _The Checklist Manifesto_
+- Craig Whitlock _The Afghanistan Papers_
 - Anthony Beevor _Stalingrad: The Fateful Siege_
 - Todd McLeish _Return of the Sea Otter_
