--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -1,6 +1,5 @@
 ## Reading
 - James Stanier _Becoming an Effective Sfotware Engineering Manager_
-- Robert Pinker _The Language Instinct_
 - Marcello La Rocca _Advanced Algorithms and Data Structures_
 
 ## Read
@@ -10,6 +9,18 @@
 - Chuck Klosterman _The Nineties_
 - Eric Cline _1197 BC The Year Civilization Collapsed_
 - Atul Gawunde _The Checklist Manifesto_
+- Josiah Ober _The Rise and Fall of Classical Greece_
 - Craig Whitlock _The Afghanistan Papers_
 - Anthony Beevor _Stalingrad: The Fateful Siege_
+- Emily St. John Mandel _Sea of Tranquility_
 - Todd McLeish _Return of the Sea Otter_
+- Edmond Smith _Merchants_
+- Robert Pinker _The Language Instinct_
+- Nancy Forbes _Faraday, Maxwell, and the Electromagnetic Field_
+- David Halberstam _The Reckoning_
+- S. Fredrick Starr _Lost Enlightenment_
+- Tyler Cowen & Daniel Gross _Talent_
+- Rick McIntyre _The Reign of Wolf 21_
+- Steven Johnson _Enemy of All Maknind_
+- Francis Fukuyama _The Origin of Political Order_
+- Peter Zeihan _The End of the World is Just the Beginning_
