--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -24,3 +24,8 @@
 - Steven Johnson _Enemy of All Maknind_
 - Francis Fukuyama _The Origin of Political Order_
 - Peter Zeihan _The End of the World is Just the Beginning_
+- Vaclav Smil _Energy and Civilization_
+- Francis Fukuyama _Political Order and Political Decay_
+- Tyler Cowen & Daniel Gross _Talent_
+- Eugenia Cheng _How to Bake Pi_
+- Tiago Antao _Fast Python for Data Science_
