--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -29,3 +29,7 @@
 - Tyler Cowen & Daniel Gross _Talent_
 - Eugenia Cheng _How to Bake Pi_
 - Tiago Antao _Fast Python for Data Science_
+- Daniel P. Friedman & Matthias Felleisen _The Little Schemer_
+- John Keay _India: A History_
+- Margaret Atwood _The Penelopiad_
+- Margaret Atwood _The Handmaid's Tale_
