--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -33,3 +33,5 @@
 - John Keay _India: A History_
 - Margaret Atwood _The Penelopiad_
 - Margaret Atwood _The Handmaid's Tale_
+- Richard Dawkins _The Ancestor's Tale_
+- Nassim Taleb _Skin in the Game_
