--- a/src/books/2022.md
+++ b/src/books/2022.md
@@ -1,7 +1,3 @@
-## Reading
-- James Stanier _Becoming an Effective Sfotware Engineering Manager_
-- Marcello La Rocca _Advanced Algorithms and Data Structures_
-
 ## Read
 - Annie Dillard _The Maytrees_
 - Timothy Snyder _The Bloodlands_
@@ -34,4 +30,14 @@
 - Margaret Atwood _The Penelopiad_
 - Margaret Atwood _The Handmaid's Tale_
 - Richard Dawkins _The Ancestor's Tale_
+- James Stanier _Becoming an Effective Software Engineering Manager_
 - Nassim Taleb _Skin in the Game_
+- Bart van Es _Shakespeare's Comedies: A Very Short Introduction_
+- Richard Rhodes _The Making of the Atomic Bomb_
+- Madeline Miller _The Song of Achilles_
+- David Hackett Fischer _Albion's Seed_
+- Peter Zeihan _The Accidental Superpower_
+- Brad Delong _Slouching Toward Utopia_
+- Shakespeare _Richard II_
+- Shakespeare _Henry IV part 1_
+- Susan Lacke _Life's Too Short to Go So F*cking Slow_
